--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     border-top: 5px solid #f07c17;
     padding: 30px;
-    font: 24px Verdana, Roboto, sans-serif;
+    font: 24px Verdana, sans-serif;
     color: #666;
     background-color: #333;    
 }
@@ -18,23 +18,24 @@ h1 {
 h2 {
     font-size: 24px;
     font-weight: bold;
-    padding-left: 5px;
+    padding-left: 0px;
     padding-bottom: 10px
 }
 
 img {
-    padding: 0px 0px 30px 0px;
+    padding: 0px 0px 40px 0px;
 }
 
 .features {
-    padding: 0px 53px;
+    padding: 10px 30px 30px 30px;
+    margin: -10px 0 0 0;
 }
 
 ul {
     font-size: 16px;
     font-weight: normal;
-    padding-left: 44px;
-    padding-top: 9px;
+    padding-left: 40px;
+    padding-top: 10px;
     line-height: 2;
 }
 
@@ -46,7 +47,7 @@ ul > li {
 p {
     margin: 0;
     font-size: 16px;
-    padding: 10px 28px 0px 5px;
+    padding: 10px 0px 0px 0px;
     line-height: 2;
 }
 
@@ -57,8 +58,8 @@ p {
     border: 0px solid #ccc;
     background-color: #fff;
     
-    -webkit-box-shadow: 2px 2px 4px #888;
-        box-shadow: 2px 2px 4px #888;
+    -webkit-box-shadow: 5px 5px 5px #000;
+            box-shadow: 5px 5px 5px #000;
 }
 
 .box {
